# invoicez

./: .flake8  .gitignore  Makefile  pyproject.toml
.github/workflows/: cd.yml
invoicez/: __main__.py  billing.py  building.py  calendar.py  directing.py  mapping.py  merging.py  model.py  paths.py  running.py  settings.py  syncing.py  target.py
invoicez/cli/: __init__.py  convert_invoices.py  dump_raw_events.py  main.py
invoicez/compiling/: billing.py  building.py  running.py  target.py  templating.py
invoicez/config/: logging.py  paths.py  settings.py
invoicez/model/: data.py  duration.py  event.py  invoice.py  merged_event.py
invoicez/scheduling/: calendar.py  mapping.py  merging.py
tests/: conftest.py  test_billing.py  test_calendar.py  test_cli.py  test_merging.py  test_syncing.py  test_templating.py
tests/assets/: events.json
tests/assets/test_cli/: config.yml
tests/assets/test_cli/data/: companies.yml  rates.yml  trainings.yml
tests/assets/test_cli/templates/: dates.tex  invoice-description.tex  invoice-main-item-description.tex
