[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = "Tool to handle invoices."
homepage = "https://github.com/m09/invoicez"
license = "Apache-2.0"
name = "invoicez"
readme = "README.md"
version = "4.0.0"

[tool.poetry.dependencies]
GitPython = "^3.1.27"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
google-api-python-client = "^2.53.0"
google-auth-oauthlib = "^0.5.2"
pydantic = "^1.9.1"
python = "^3.8"
rich = "^12.5.1"
typer = "^0.6.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.991"
"pdfminer.six" = "^20221105"
pylint = "^2.15.7"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
types-PyYAML = "^6.0.12.2"

[tool.poetry.scripts]
invoicez = 'invoicez.cli:main'

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
