[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = "Tool to handle invoices."
homepage = "https://github.com/m09/invoicez"
license = "Apache-2.0"
name = "invoicez"
readme = "README.md"
version = "4.0.0"

[tool.poetry.dependencies]
gitpython = "^3.1.29"
google-api-python-client = "^2.69.0"
google-auth-oauthlib = "^0.7.1"
jinja2 = "^3.1.2"
pydantic = "^1.10.2"
python = "^3.8.1"
pyyaml = "^6.0"
rich = "^12.6.0"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.991"
pdfminer-six = "^20221105"
pylint = "^2.15.8"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
types-pyyaml = "^6.0.12.2"

[tool.poetry.scripts]
invoicez = "invoicez.cli:main"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
